# OpenMC

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/dev/: classic.xcf
src/: camera.rs  camera_controller.rs  main.rs
src/block/: atlas.rs  block.rs  block_utils.rs  blocks.rs  cobblestone.rs  flower.rs  mod.rs  mushroom.rs  sponge.rs  utils.rs  wood.rs  wool.rs
src/chunk/: chunk.rs  mesher.rs  mod.rs
src/level/: level.rs  mod.rs  position.rs
src/level/chunk/: buffer.rs  buffer.rs.old  config.rs  data.rs  mod.rs
src/level/chunk/mesh/: culler.rs  mesh.rs  mod.rs
src/level/configs/: mod.rs  variable.rs
src/level/generators/: flat_world.rs  mod.rs  simple_gen.rs
src/utils/: mod.rs  unit3.rs
src/utils/position/: chunk.rs  global.rs  mod.rs
